--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 install:
   - sudo pip install proselint
-  - sudo apt install aspell
+  - sudo apt-get install aspell
 
 script:
   - proselint README.md
