--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 install:
   - sudo pip install proselint
   - sudo apt-get install aspell
+  - sudo apt install lynx
 
 script:
-  - proselint README.md
-  - cat *.md | aspell --list
+  - ./find_problems.sh
