--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
+dist: trusty
+sudo: required
+
 install:
   - sudo pip install proselint
-  - sudo apt install aspell
-  - sudo apt install lynx lynx-cur
+  - sudo apt-get install aspell
+  - sudo apt-get install lynx lynx-cur
 
 script:
   - ./find_problems.sh
